<resources>
    <string name="app_name">JF</string>
    <string name="posts">Посты</string>
    <string name="post_feed">Лента</string>
    <string name="localities">Ближайшие населённые пункты</string>
    <string name="other">Дополнительно</string>
    <string name="error_getting_location">Не удалось получить местоположение</string>
    <string name="error_check_permission">Будут показаны ближайшие города к Москве.
        Дайте разрешение для определения вашего местопололожения</string>
    <string name="permission">Разрешение</string>
    <string name="ok">OK</string>
    <string name="no">Нет</string>
    <string name="no_location">Не удалось получить местоположение</string>
    <string name="nick">Никнейм</string>
    <string name="password">Пароль</string>
    <string name="login">Войти</string>
    <string name="registration">Регистрация</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="error">Ошибка</string>
    <string name="email">Email</string>
    <string name="empty_nick">Никнейм не должен быть пустым</string>
    <string name="empty_email">Email не должен быть пустым</string>
    <string name="not_the_same_passwords">Пароли не совпадают</string>
    <string name="min_6_symbols_password">Пароль должен содержать минимум 6 символов</string>
    <string name="max_30_symbols_password">Пароль должен содержать максимум 30 символов</string>
    <string name="password_contains_space">Пароль не должен содержать пробел</string>
    <string name="source_wikipedia">Источник: Википедия</string>
    <string name="no_internet">Ошибка. Проверьте подключение к интернету</string>
    <string name="text">Текст…</string>
    <string name="send">Отправить</string>
    <string name="post_sent">Пост опубликован</string>
    <string name="add_media">Закрепить медиа</string>
    <string name="zero">0</string>
    <string name="added_files">Прикреплено файлов:</string>
    <string name="photo">Фото</string>
    <string name="video">Видео</string>
    <string name="music">Музыка</string>
    <string name="loading_file">Идёт загрузка файла</string>
    <string name="loading_success">Файл успешно загружен</string>
    <string name="max_count_files">Нельзя загружать более 10 файлов</string>
    <string name="post_is_empty">Пост не может быть пустым</string>
    <string name="update">Обновить</string>
    <string name="loading">Загрузка…</string>
    <string name="error_loading_media">Не удалось загрузить медиа.
        Проверьте подключение к интернету</string>
    <string name="new_post">Новый пост</string>
    <string name="sign_in_account">Войти в аккаунт</string>
    <string name="exit">Выйти</string>
    <string name="edit_profile">Редактировать профиль</string>
    <string name="change_photo">Изменить фото</string>
    <string name="save">Сохранить</string>
    <string name="nick_">Никнейм:</string>
    <string name="save_nick">Сохранить никнейм</string>
    <string name="nick_saved_successfully">Никнейм успешно сохранён</string>
    <string name="settings">Настройки</string>
    <string name="change_password">Поменять пароль</string>
    <string name="new_password">Новый пароль</string>
    <string name="change_password_2">Изменить пароль</string>
    <string name="change_password_successfully">Пароль успешно изменён</string>
    <string name="chat_with_user">Чат с пользователем</string>
    <string name="see_all">Смотреть всё</string>
    <string name="image">[Изображение]</string>
    <string name="video_">[Видео]</string>
    <string name="delete_post">Удалить запись</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_your_message">Введите ваше сообщение…</string>
    <string name="login_and_start_chat">Войдите, чтобы начать общаться!</string>
    <string name="message_should_not_empty">Сообщение не должно быть пустым</string>
    <string name="messages">Сообщения</string>
    <string name="delete_message">Удалить сообщение</string>
    <string name="new_">new</string>
    <string name="not_have_user_or_invalid_password">Ошибка. Возможно, пользователя с таким email не
        существует или неправильный пароль</string>
    <string name="notes">Заметки</string>
    <string name="success_save">Успешно сохранено</string>
    <string name="new_messages">У вас есть новые сообщения</string>
    <string name="error_registration">Ошибка. Возможно, пользователь с таким email существует
    </string>
    <string name="heading">Заголовок</string>
    <string name="jf_">JF</string>
    <string name="is_have_account">Есть аккаунт?</string>
</resources>
