<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/send"
            android:textSize="16sp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_add_media"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/add_media"
            android:textColor="#2cb3ae"
            android:textSize="16sp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"/>

        <TextView
            android:id="@+id/tv_added_files"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/added_files"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_count_media"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/zero"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

        <EditText
            android:id="@+id/et_heading"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:ems="10"
            android:hint="@string/heading"
            android:gravity="top" />

        <EditText
            android:id="@+id/et_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:ems="10"
            android:hint="@string/text"
            android:gravity="top" />
    </LinearLayout>
</ScrollView>
